<?xml version="1.0" encoding="utf-8"?>
<!--app:cardBackgroundColor="@color/white"-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/guitar_item_1"
            android:padding="4dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/item_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_1"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/line_2"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/item_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/line_3"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>