<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header_container_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <!--HEADER-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/decor_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:src="@drawable/more_gradient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title_more"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_guitar_player"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/ask_the_expert"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_comment_black_48dp"
                    android:drawableStart="@drawable/ic_comment_black_48dp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/text_view_4_more"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="8dp" >

                        <TextView
                            android:id="@+id/whats_app_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:drawableLeft="@drawable/ic_whatsapp_white_24dp"
                            android:drawableStart="@drawable/ic_whatsapp_white_24dp"
                            android:drawablePadding="14dp"
                            android:gravity="center_vertical"
                            android:text="@string/whats_app"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/blue"
                        app:cardCornerRadius="8dp" >

                        <TextView
                            android:id="@+id/email_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:drawableLeft="@drawable/ic_contact_mail_white_24dp"
                            android:drawableStart="@drawable/ic_contact_mail_white_24dp"
                            android:drawablePadding="14dp"
                            android:gravity="center_vertical"
                            android:text="@string/e_mail"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/feedback"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/contact_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_contact_us_black_24dp"
                    android:drawableStart="@drawable/ic_contact_us_black_24dp"
                    android:drawablePadding="26dp"
                    android:gravity="center_vertical"
                    android:padding="14dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="16dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="16dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="76dp"
                    android:layout_marginStart="76dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/rate_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_rate_black_24dp"
                    android:drawableStart="@drawable/ic_rate_black_24dp"
                    android:drawablePadding="26dp"
                    android:gravity="center_vertical"
                    android:padding="14dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="16dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="16dp"
                    android:text="@string/rate_on_google_play"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/others"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/share_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_share_black_24dp"
                    android:drawableStart="@drawable/ic_share_black_24dp"
                    android:drawablePadding="26dp"
                    android:gravity="center_vertical"
                    android:padding="14dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="16dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="16dp"
                    android:text="@string/share_app"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="76dp"
                    android:layout_marginStart="76dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/privacy_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_privacy_policy_black_24dp"
                    android:drawableStart="@drawable/ic_privacy_policy_black_24dp"
                    android:drawablePadding="26dp"
                    android:gravity="center_vertical"
                    android:padding="14dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="16dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="16dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="76dp"
                    android:layout_marginStart="76dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/disclaimer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_disclaimer_black_24dp"
                    android:drawableStart="@drawable/ic_disclaimer_black_24dp"
                    android:drawablePadding="26dp"
                    android:gravity="center_vertical"
                    android:padding="14dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="16dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="16dp"
                    android:text="@string/disclaimer"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>